# ------------------------------------------------------------------------------
# CMake file for HashAhead
#
# Copyright (c) 2021-2025 The HashAhead developers
# Distributed under the MIT/X11 software license, see the accompanying
# file COPYING or http://www.opensource.org/licenses/mit-license.php.
# ------------------------------------------------------------------------------

# sub directories
add_subdirectory(blockchain)
add_subdirectory(hnbase)
add_subdirectory(crypto)
add_subdirectory(common)
add_subdirectory(mpvss)
add_subdirectory(storage)
add_subdirectory(network)
add_subdirectory(delegate)
add_subdirectory(leveldb)
add_subdirectory(snappy)
add_subdirectory(jsonrpc)
add_subdirectory(wvm)
add_subdirectory(hvm)
add_subdirectory(heth)
