# ------------------------------------------------------------------------------
# CMake file for HashAhead
#
# Copyright (c) 2021-2025 The HashAhead developers
# Distributed under the MIT/X11 software license, see the accompanying
# file COPYING or http://www.opensource.org/licenses/mit-license.php.
# ------------------------------------------------------------------------------

add_subdirectory(hevm)
add_subdirectory(vface)